--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "nodemon server/index.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server/index.js",
+    "test": "jest"
   },
   "dependencies": {
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.2.1",
     "react": "16.12.0",
     "react-dom": "16.12.0"
+  },
+  "devDependencies": {
+    "enzyme": "^3.11.0",
+    "jest": "^25.1.0",
+    "supertest": "^4.0.2"
   }
 }
