--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "isomorphic-unfetch": "^3.0.0",
+    "mongoose": "^5.9.1",
     "next": "9.2.1",
     "react": "16.12.0",
     "react-dom": "16.12.0"
