--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "bcrypt": "^3.0.8",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "isomorphic-unfetch": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.1",
     "next": "9.2.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "react": "16.12.0",
     "react-dom": "16.12.0"
   },
