--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "nodemon server/index.js -p $PORT",
     "build": "next build",
-    "start": "next start -p $PORT",
-    "heroku-postbuild": "npm run build",
+    "start": "NODE_ENV=production node server/index.js -p $PORT",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -15,11 +14,13 @@
     "express": "^4.17.1",
     "isomorphic-unfetch": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.9.1",
     "next": "9.2.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "react": "16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "16.12.0"
   },
   "devDependencies": {
